// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractTransactionComponent should render in loading store 1`] = `
<contract-transaction
  messageToastService={[Function _NxMessageToastService]}
  router={[Function _Router]}
  store={[Function Object]}
  transactionTypes={[Function Array]}
>
  <nx-link
    class="nx-link nx-link--small"
    routerlink="/"
    tabindex="0"
  >
    <nx-icon
      class="nx-link__icon"
      name="chevron-left"
    />
    Zurück
  </nx-link><div
    class="spinner-outlet"
  >
  </div>
</contract-transaction>
`;

exports[`ContractTransactionComponent should render with contract without transactionType 1`] = `
<contract-transaction
  messageToastService={[Function _NxMessageToastService]}
  router={[Function _Router]}
  store={[Function Object]}
  transactionTypes={[Function Array]}
>
  <nx-link
    class="nx-link nx-link--small"
    routerlink="/"
    tabindex="0"
  >
    <nx-icon
      class="nx-link__icon"
      name="chevron-left"
    />
    Zurück
  </nx-link><div
    class="spinner-outlet"
  >
  </div><div
    class="content"
  >
    <contract-display />
    <div>
      <nx-formfield
        class="nx-formfield--type-nx-dropdown nx-formfield is-floating"
        label="Transaktion wählen"
      >
        <div
          class="nx-formfield__wrapper"
        >
          <div
            class="nx-formfield__row"
          >
            <div
              class="nx-formfield__flexfield"
            >
              <div
                class="nx-formfield__input-container"
              >
                <div
                  class="nx-formfield__input"
                >
                  <span
                    class="nx-formfield__label-holder"
                  >
                    <label
                      aria-owns="nx-dropdown-rendered-0"
                      class="nx-formfield__label"
                      for="nx-dropdown-rendered-0"
                      id="nx-formfield-label-0"
                    >
                      <span>
                        Transaktion wählen
                      </span>
                    </label>
                  </span>
                  <nx-dropdown
                    aria-controls="nx-dropdown-modal-1"
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-invalid="false"
                    aria-labelledby="nx-formfield-label-0"
                    aria-required="false"
                    class="nx-dropdown"
                    placeholder="Bitte wählen"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      cdkoverlayorigin=""
                      class="nx-dropdown__container"
                    >
                      <div
                        class="nx-dropdown__rendered"
                        id="nx-dropdown-rendered-0"
                      >
                        <span>
                          Bitte wählen
                        </span>
                      </div>
                      <div
                        class="nx-dropdown__icon"
                      >
                        <nx-icon
                          class="nx-dropdown__chevron nx-icon--auto"
                          data-nx-icon-name="chevron-down"
                          name="chevron-down"
                        >
                          <svg
                            fill="none"
                            height="1em"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.34317 7.75732L4.92896 9.17154L12 16.2426L19.0711 9.17157L17.6569 7.75735L12 13.4142L6.34317 7.75732Z"
                              fill="currentColor"
                            />
                          </svg>
                        </nx-icon>
                      </div>
                    </div>
                  </nx-dropdown>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nx-formfield>
    </div>
    <div>
    </div>
  </div>
</contract-transaction>
`;

exports[`ContractTransactionComponent should render with error 1`] = `
<contract-transaction
  messageToastService={[Function _NxMessageToastService]}
  router={[Function _Router]}
  store={[Function Object]}
  transactionTypes={[Function Array]}
>
  <nx-link
    class="nx-link nx-link--small"
    routerlink="/"
    tabindex="0"
  >
    <nx-icon
      class="nx-link__icon"
      name="chevron-left"
    />
    Zurück
  </nx-link><nx-error
    class="nx-error--message"
    id="nx-error-0"
    role="alert"
  >
    <nx-message
      class="context-error"
      context="error"
    >
      <nx-icon
        aria-hidden="true"
        class="nx-message__icon nx-icon--s"
        data-nx-icon-name="exclamation-triangle"
        size="s"
      >
        <svg
          height="1em"
          version="1.1"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
            id="Exclamation-triangle-icon"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M12,2 C12.3955786,2 12.7611083,2.21813636 12.9588976,2.57223923 L22.851658,20.2832823 C23.0494473,20.6373852 23.0494473,21.0736579 22.851658,21.4277608 C22.6538687,21.7818636 22.288339,22 21.8927604,22 L2.10723959,22 C1.71166099,22 1.34613128,21.7818636 1.14834198,21.4277608 C0.950552674,21.0736579 0.950552674,20.6373852 1.14834198,20.2832823 L11.0411024,2.57223923 C11.2388917,2.21813636 11.6044214,2 12,2 Z M12.01,17 C11.314102,17 10.75,17.583074 10.75,18.3023765 C10.75,19.0216791 11.314102,19.6047531 12.01,19.6047531 C12.705898,19.6047531 13.27,19.0216791 13.27,18.3023765 C13.27,17.583074 12.705898,17 12.01,17 Z M12.01,7.5 C11.314102,7.5 10.75,7.958913 10.75,8.525 L10.75,8.525 L10.75,14.675 C10.75,15.2411075 11.314102,15.7 12.01,15.7 C12.705898,15.7 13.27,15.2411075 13.27,14.675 L13.27,14.675 L13.27,8.525 C13.27,7.958913 12.705898,7.5 12.01,7.5 Z"
              fill-rule="nonzero"
              id="Combined-Shape"
            />
          </g>
        </svg>
      </nx-icon>
      <div
        class="nx-message__content"
      >
        An error occurred
      </div>
    </nx-message>
  </nx-error><div
    class="spinner-outlet"
  >
  </div>
</contract-transaction>
`;

exports[`ContractTransactionComponent should render with transactionType "Vertragskündigung" 1`] = `
<contract-transaction
  messageToastService={[Function _NxMessageToastService]}
  router={[Function _Router]}
  store={[Function Object]}
  transactionTypes={[Function Array]}
>
  <nx-link
    class="nx-link nx-link--small"
    routerlink="/"
    tabindex="0"
  >
    <nx-icon
      class="nx-link__icon"
      name="chevron-left"
    />
    Zurück
  </nx-link><div
    class="spinner-outlet"
  >
  </div><div
    class="content"
  >
    <contract-display />
    <div>
      <nx-formfield
        class="nx-formfield--type-nx-dropdown nx-formfield is-floating"
        label="Transaktion wählen"
      >
        <div
          class="nx-formfield__wrapper"
        >
          <div
            class="nx-formfield__row"
          >
            <div
              class="nx-formfield__flexfield"
            >
              <div
                class="nx-formfield__input-container"
              >
                <div
                  class="nx-formfield__input"
                >
                  <span
                    class="nx-formfield__label-holder"
                  >
                    <label
                      aria-owns="nx-dropdown-rendered-2"
                      class="nx-formfield__label"
                      for="nx-dropdown-rendered-2"
                      id="nx-formfield-label-1"
                    >
                      <span>
                        Transaktion wählen
                      </span>
                    </label>
                  </span>
                  <nx-dropdown
                    aria-controls="nx-dropdown-modal-3"
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-invalid="false"
                    aria-labelledby="nx-formfield-label-1"
                    aria-required="false"
                    class="nx-dropdown"
                    placeholder="Bitte wählen"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      cdkoverlayorigin=""
                      class="nx-dropdown__container"
                    >
                      <div
                        class="nx-dropdown__rendered"
                        id="nx-dropdown-rendered-2"
                      >
                        <span>
                          Bitte wählen
                        </span>
                      </div>
                      <div
                        class="nx-dropdown__icon"
                      >
                        <nx-icon
                          class="nx-dropdown__chevron nx-icon--auto"
                          data-nx-icon-name="chevron-down"
                          name="chevron-down"
                        >
                          <svg
                            fill="none"
                            height="1em"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.34317 7.75732L4.92896 9.17154L12 16.2426L19.0711 9.17157L17.6569 7.75735L12 13.4142L6.34317 7.75732Z"
                              fill="currentColor"
                            />
                          </svg>
                        </nx-icon>
                      </div>
                    </div>
                  </nx-dropdown>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nx-formfield>
    </div>
    <div>
    </div>
  </div>
</contract-transaction>
`;
